--- a/views/IconDesign.handlebars
+++ b/views/IconDesign.handlebars
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-  <title>Icon Design</title> 
+  <title>Logo & Icon Design</title> 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <link rel="icon" type="image/png" href="../favicon.ico">
@@ -31,10 +31,42 @@
   <div id="main" class="1">
     <div id="content" class="container">
       <section class="project">
-        <h1>Icon Design</h1>
+        <h1>Logos & Icons</h1>
         <div>
           <div>
-            <img src="../Project/IconDesign/DB.jpg">
+            <img src="../Project/IconDesign/DB2low.jpg">
+          </div>
+        </div>
+        <div class="center">
+          <div class="grid-half">
+            <img src="../Project/IconDesign/ParknGo-basic.jpg">
+          </div>
+          <div class="grid-half">
+            <img src="../Project/IconDesign/ActivityViz-basic.jpg">
+          </div>
+        </div>
+        <div class="center">
+          <div class="grid-half">
+            <img src="../Project/IconDesign/Resume-basic.jpg">
+          </div>
+          <div class="grid-half">
+            <img src="../Project/IconDesign/ActivityViz-icons.jpg">
+          </div>
+        </div>
+        <div class="center">
+          <div class="grid-half">
+            <img src="../Project/IconDesign/ParknGo-AppLogo.jpg">
+          </div>
+          <div class="grid-half">
+            <img src="../Project/IconDesign/ParknGo-TeamLogo.jpg">
+          </div>
+        </div>
+        <div class="center">
+          <div class="grid-half">
+            <img src="../Project/IconDesign/UCSDMap.jpg">
+          </div>
+          <div class="grid-half">
+            <img src="../Project/IconDesign/CognectionLogo.jpg">
           </div>
         </div>
       </section>
