--- a/views/SocialFitness.handlebars
+++ b/views/SocialFitness.handlebars
@@ -57,13 +57,13 @@
             <img src="../Project/SocialFitness/AffinityDiagram3.png">
           </div>
         </div>
-        <div class="center">
+        <!-- <div class="center">
           <p class="small note">
             <strong>WHAT/WHY</strong>
             <br>
             Fitness event planning can become very hectic and unreliable because there are many differences in the process of planning and winthin a user. There are many different communication/coordinating methods such as Facebook, Google Chat, text, etc. In addition, the variable of a person greatly contributes to this planning process such as the different level of skills and commitment. 
           </p>
-        </div>
+        </div> -->
         <div class="center">
           <div class="grid-half">
             <img src="../Project/SocialFitness/FollowersOriginal.JPG">
