--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -28,7 +28,7 @@
       <li><a href="/about">About&Contact</a></li>
     </ul>
   </header>
-  <div id="main" class="home">
+  <div id="main" class="home active">
     <div class="splash" id="splashHome">
       <section class="splashTitle">
         <h1 id="zxz" class="easeIn">ZXZ</h1>
