--- a/public/css/zxzdesigns.css
+++ b/public/css/zxzdesigns.css
@@ -14,7 +14,6 @@ body{
 h1{
 	font-family:"lato", sans-serif;
 	font-size:2.5em;
-	font-size:11.5vw;
 	text-transform:uppercase;
 	text-align:center;
 	font-weight:900;
@@ -226,16 +225,16 @@ header ul li a:hover{
 	transition: all 0.8s cubic-bezier(0,1.5,0.5,1);
 }
 .aboutMe{
-	margin-bottom:13em;
+	margin-bottom:10em;
 }
 .contactMe{
 	margin-bottom:8.2em;
 }
 .contactMe h1, .projects h1, .project h1{
-	margin-bottom:1em;
+	margin-bottom:0.7em;
 }
 .whatIdo{
-	margin-bottom:6em;
+	margin-bottom:3em;
 }
 .aboutMe:after, .contactMe:after{
 	content:"";
@@ -245,7 +244,7 @@ header ul li a:hover{
 	width:100%;
 	height:2px;
 	background:#eaeaea;
-	margin-top:4.2em;
+	margin-top:2em;
 }
 .home .aboutMe figure{
 	width:200px;
@@ -267,11 +266,13 @@ ul{
 }
 .centerText{
 	text-align:center;
+	margin-bottom:2em;
+	width:80%;
 }
 a.button{
 	border: 1px solid #bdc3c7;
 	border-radius:300px;
-	padding:15px 50px;
+	padding:15px 30px;
 	margin-top:2em;
 	font-size: 14px;
 	text-transform:uppercase;
@@ -321,7 +322,7 @@ p.demoNote{
 		font-size: 112.5%;
 	}
 	body h1 {
-		font-size:9vw;
+		font-size:7vw;
 	}
  	.home #splashHome .splashTitle h1{
 		font-size: 15vw;
@@ -347,8 +348,8 @@ p.demoNote{
 	}
 	body h1{
 		margin-bottom:0.6em;
-		font-size:3.5em;
-		font-size:7vw;
+		font-size:3em;
+		font-size:5vw;
 		letter-spacing:0.22em;
 	}
 	.splashTitle h1{
@@ -410,7 +411,7 @@ p.demoNote{
 	    box-pack: center;
 	}
 	a.button{
-		padding: 20px 90px;
+		padding: 15px 50px;
 	}
 	.projects .grid-thirds{
 		width:30%;
@@ -421,7 +422,7 @@ p.demoNote{
 		margin-bottom:1em;
 	}
 	form.container{
-		width:88%;
+		width:70%;
 		padding-top:0;
 	}
 	form .grid-half{
@@ -472,13 +473,19 @@ p.demoNote{
 form input,
 form textarea{
 	width:100%;
-	padding:20px;
+	padding:5px 20px;
+	font-size:1em;
+	line-height:1.3em;
+	border: solid black 1px;
 }
 form textarea{
 	height:200px;
 	max-width:100%;
 }
-
+form input:focus,
+form textarea:focus{
+	border-color:blue;
+}
 .grid-half:nth-child(2){
 	margin-right:0;
 }
