--- a/public/css/zxzdesigns.css
+++ b/public/css/zxzdesigns.css
@@ -539,7 +539,7 @@ left: 0;
 	-ms-transform: scale(0.8);
 	-o-transform: scale(0.8);
 	transform: scale(0.8);*/
-	opacity: 0.5;
+	opacity: 0.3 !important;
 	z-index: 1;
 	overflow: hidden;
 }
