--- a/views/ActivityViz.handlebars
+++ b/views/ActivityViz.handlebars
@@ -32,7 +32,7 @@
     <div id="content" class="container">
       <section class="project">
         <h1>Activity Viz</h1>
-        <p class="large">
+        <p class="centerText">
           Kinect Data Activity Visualization is designed to be an add-on visualization tool to the existing Kinect data analysis programs such as <a href="https://tla.mpi.nl/tools/tla-tools/elan/" target="_blank" class="no-ajaxy">ELAN</a> and <a href="http://chronoviz.com/" target="_blank" class="no-ajaxy">ChronoViz</a> for Gesture Researchers.
         </p>
         <div>
@@ -95,6 +95,17 @@
           <div class="grid-half">
             <img src="../Project/ActivityViz/x3dom.jpg">
           </div>
+        </div>
+        <div class="center">
+          <div class="grid-half">
+            <img src="../Project/ActivityViz/Login.jpg">
+          </div>
+          <div class="grid-half">
+            <img src="../Project/ActivityViz/Upload.jpg">
+          </div>
+        </div>
+        <div>
+            <img src="../Project/ActivityViz/Visualization.jpg">
         </div>
         <p class="large note">
           <strong>DESIGN DECISION</strong>
