--- a/views/IconDesign.handlebars
+++ b/views/IconDesign.handlebars
@@ -34,7 +34,7 @@
         <h1>Logos & Icons</h1>
         <div>
           <div>
-            <img src="../Project/IconDesign/DB2low.jpg">
+            <img src="../Project/IconDesign/DBZ.jpg">
           </div>
         </div>
         <div class="center">
