--- a/views/OnMyBlock.handlebars
+++ b/views/OnMyBlock.handlebars
@@ -32,7 +32,7 @@
     <div id="content" class="container">
       <section class="project">
         <h1>OnMyBlock</h1>
-        <p class="large">
+        <p class="centerText">
           I was interviewed by OnMyBlock in 2013 and my assignment was to create a list-view result of available rental apartments/houses by using Adobe Photoshop.
         </p>
         <div>
