--- a/views/ParknGo.handlebars
+++ b/views/ParknGo.handlebars
@@ -32,7 +32,7 @@
     <div id="content" class="container">
       <section class="project">
         <h1>Park & Go</h1>
-        <p class="large">
+        <p class="centerText">
           Park & Go is a mobile/web parking payment application that aims to shorten user's time on a parking lot so that they can get to where they need to be faster. 
         </p>
         <div>
@@ -92,21 +92,15 @@
             <img src="../Project/ParknGo/Storyboard-2.jpg">
           </div>
         </div>
-        <div>
-          <div>
-            <img src="../Project/ParknGo/PaperPrototypeMain.JPG">
-          </div>
-        </div>
+        <p class="small note">
+          Due to assignment preference, only the front-end desktop web application was developed. However, a mobile version and future plan for this idea will be dicussed later.
+         </p>
         <div class="center">
           <div class="grid-half">
-            <img src="../Project/ParknGo/PaperPrototypeParkingLot.JPG">
+            <img src="../Project/ParknGo/PaperPrototypeMain.JPG">
           </div>
           <div class="grid-half">
-            <p class="small">
-              <strong>Design Decisions</strong>
-              <br>
-              Due to assignment preference, only the front-end desktop web application was developed. However, a mobile version and future plan for this idea will be dicussed later.
-            </p>
+            <img src="../Project/ParknGo/PaperPrototypeParkingLot.JPG">
           </div>
         </div>
         <div class="center">
