--- a/views/PastPortfolios.handlebars
+++ b/views/PastPortfolios.handlebars
@@ -45,7 +45,7 @@
             <img src="../Project/PastPortfolios/bottom.jpg">
           </div>
         </div>
-        <p class="large note">
+        <p class="centerText note">
             The whole portfolio is handled entirely by Javascript and JQuery. All contents are on JSON files and they are being rendered by AJAX requests.
         </p>
         <p class="centerText">
