--- a/views/SocialFitness.handlebars
+++ b/views/SocialFitness.handlebars
@@ -32,7 +32,7 @@
     <div id="content" class="container">
       <section class="project">
         <h1>Social Fitness</h1>
-        <p class="large">
+        <p class="centerText">
           Social Fitness is a rapid contextual user-centered design web application that simplifies fitness event planning. 
         </p>
         <div>
@@ -85,7 +85,7 @@
             <img src="../Project/SocialFitness/wireframePrototype.png">
           </div>
           <div class="grid-half">
-            <img src="../Project/SocialFitness/wireframePrototype.png">
+            <img src="../Project/SocialFitness/wireframePrototype2.png">
           </div>
         </div>
       </section>
