--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -33,7 +33,7 @@
     <div id="content" class="container">
       <section>
         <h1>Projects</h1>
-        <p class="large">
+        <p class="centerText">
           All of my projects were developed by using Node.js unless otherwise indicated. My roles in the projects were a graphic designer, a UX designer, & a coder.
         </p>
         <div class="center">
