--- a/views/UCSDMap.handlebars
+++ b/views/UCSDMap.handlebars
@@ -32,7 +32,7 @@
     <div id="content" class="container">
       <section class="project">
         <h1>UCSD Map</h1>
-        <p class="large">
+        <p class="centerText">
           UCSD Map is designed to provide quick building locator inside of the campus of UCSD for any one who is on campus. User target includes students, staffs, and visitors.
         </p>
         <div>
@@ -49,7 +49,7 @@
             </p>
           </div>
           <div class="grid-half">
-            <img src="../Project/UCSDMap/testing.JPG">
+            <img src="../Project/UCSDMap/UserTesting.jpg">
           </div>
         </div>
         <div class="center">
