--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -60,28 +60,16 @@
 
       <section class="contactMe">
         <h1>Contact Me</h1>
-        <p class="large">
+        <p class="centerText">
           I am currently on vacation, but I am seeking a full time role as a Graphic / UI / UX designer. Please drop a line and say hi :)
         </p>
-        <div class="center">
-          <div class="grid-half">
-            <p class="large">
-              (323)543-1723<span class="glyphicon glyphicon-phone"></span>
-            </p>
-          </div>
-          <div class="grid-half">
-            <p class="large">
-              <a href="mailto:zhenxzheng@gmail.com" target="_top">zhenxzheng@gmail.com</a><span class="glyphicon glyphicon-envelope"></span>
-            </p>
-          </div>
-        </div>
         <form class="container">
           <div class="center">
             <div class="grid-half">
-              <input type="text" placeholder="Your Name" id="messageName">
+              <input type="text" placeholder="Name" id="messageName">
             </div>
             <div class="grid-half">
-              <input type="text" placeholder="Your E-mail" id="messageEmail">
+              <input type="text" placeholder="E-mail" id="messageEmail">
             </div>
           </div>
           <div class="center">
