fixed ResumeLink improved scroll

--- a/public/css/zxzdesigns.css
+++ b/public/css/zxzdesigns.css
@@ -94,6 +94,7 @@ header{
 header ul{
 	text-align:right;
 	margin:0 1em;
+	line-height:50px;
 }
 header ul li{
 	margin-right:10px;
@@ -103,10 +104,16 @@ header ul li{
 header ul li a{
 	color:#fff;
 	text-decoration: none;
-	padding:2px 0;
+	padding:5px 0 0 0;
 }
 header ul li a:hover{
+	-ms-transition: all 0.2s ease-out;
+	-webkit-transition: all 0.2s ease-out;
+	-moz-transition: all 0.2s ease-out;
+	-o-transition: all 0.2s ease-out;
+	transition: all 0.2s ease-out;
 	border-bottom: solid 1px;
+	padding-bottom:7px;
 }
 #main,#main2{
 	position:absolute;
@@ -227,13 +234,10 @@ header ul li a:hover{
 .aboutMe{
 	margin-bottom:10em;
 }
-.contactMe{
-	margin-bottom:8.2em;
-}
 .contactMe h1, .projects h1, .project h1{
 	margin-bottom:0.7em;
 }
-.whatIdo{
+.whatIdo, .contactMe{
 	margin-bottom:3em;
 }
 .aboutMe:after, .contactMe:after{
@@ -303,6 +307,15 @@ footer ul li.title{
 }
 footer ul li a{
 	text-decoration:none;
+}
+footer ul li a:hover{
+	-ms-transition: all 0.2s ease-out;
+	-webkit-transition: all 0.2s ease-out;
+	-moz-transition: all 0.2s ease-out;
+	-o-transition: all 0.2s ease-out;
+	transition: all 0.2s ease-out;
+	border-bottom: solid 1px;
+	padding-bottom:5px;
 }
 
 p.demoNote{
@@ -602,6 +615,14 @@ left: 0;
 	transition: all 0.8s ease;
 	top: 0px;
 }
+.whiteHeader{
+	background:white;
+	border-bottom: solid #777 1px;
+}
+.transHeader{
+	background: transparent;
+	border-bottom: none;
+}
 .innerShadow{
 	-moz-box-shadow:    inset 0 0 10px #000000;
    	-webkit-box-shadow: inset 0 0 10px #000000;
@@ -613,10 +634,10 @@ left: 0;
 	left:50%;
 	padding:0 0.5em;
 	color:white;
-	-webkit-transform: translate(-50%, -50%);
-	-moz-transform: translate(-50%, -50%);
-	-ms-transform: translate(-50%, -50%);
-	-o-transform: translate(-50%, -50%);
+	-webkit-transform: translate(-60%, -50%);
+	-moz-transform: translate(-60%, -50%);
+	-ms-transform: translate(-60%, -50%);
+	-o-transform: translate(-60%, -50%);
 	-ms-transition: all 0.8s ease;
 	-webkit-transition: all 0.8s ease;
 	-moz-transition: all 0.8s ease;
