--- a/views/ResumeDesign.handlebars
+++ b/views/ResumeDesign.handlebars
@@ -49,7 +49,7 @@
           </div>
         </div>
         <p class="centerText">
-          <a class="button" href="/Resume/FlatResumeWeb.pdf" target="_blank" class="no-ajaxy">Resume<span class="glyphicon glyphicon-new-window"></span></a>
+          <a href="/Resume/FlatResumeWeb.pdf" target="_blank" class="no-ajaxy button">Resume<span class="glyphicon glyphicon-new-window"></span></a>
         </p>
       </section>
     </div>
