Analytic page extention fix attemp

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -129,7 +129,10 @@
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-48511938-4', 'zxzdesigns.com/home');
-    ga('send', 'pageview');
+    ga('send', {
+        'hitType':'pageview',
+        'page':'/home'
+      });
   </script>
 
   
