--- a/views/ParknGo.handlebars
+++ b/views/ParknGo.handlebars
@@ -28,7 +28,7 @@
       <li><a href="/about">About&Contact</a></li>
     </ul>
   </header>
-  <div id="main" class="1">
+  <div id="main" class="1" tabindex="-1">
     <div id="content" class="container">
       <section class="project">
         <h1>Park & Go</h1>
@@ -163,7 +163,7 @@
     </footer>
   </div>
 
-  <div id="main2"></div>
+  <div id="main2" tabindex="-1"></div>
   
   <!-- jQuery -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
