--- a/views/UCSDMap.handlebars
+++ b/views/UCSDMap.handlebars
@@ -28,12 +28,12 @@
       <li><a href="/about">About&Contact</a></li>
     </ul>
   </header>
-  <div id="main" class="1">
+  <div id="main" class="1" tabindex="-1">
     <div id="content" class="container">
       <section class="project">
         <h1>UCSD Map</h1>
         <p class="centerText">
-          UCSD Map is designed to provide quick building locator inside of the campus of UCSD for any one who is on campus. User target includes students, staffs, and visitors.
+          UCSD Map is designed to provide a quick search on UCSD's unique buildings. This web application is designed for any one who is on campus. User target includes students, staffs, and visitors.
         </p>
         <div>
           <div>
@@ -157,7 +157,7 @@
     </footer>
   </div>
 
-  <div id="main2"></div>
+  <div id="main2" tabindex="-1"></div>
   
   <!-- jQuery -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
