--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -28,7 +28,7 @@
       <li><a href="/about">About&Contact</a></li>
     </ul>
   </header>
-  <div id="main" class="about">
+  <div id="main" class="about" tabindex="-1">
     <div class="splash" id="splashAbout">
       <section class="splashTitle">
         <h1>Hi, I'm Zhen</h1>
@@ -115,7 +115,7 @@
       </div>
     </footer>
   </div>
-  <div id="main2"></div>
+  <div id="main2" tabindex="-1"></div>
  
   <!-- jQuery -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
