--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -28,12 +28,12 @@
       <li><a href="/about">About&Contact</a></li>
     </ul>
   </header>
-  <div id="main" class="home active">
+  <div id="main" class="home active" tabindex="-1">
     <div class="splash" id="splashHome">
       <section class="splashTitle">
-        <h1 id="zxz" class="easeIn">ZXZ</h1>
+        <h2 id="code" class="ease">Code  &</h2>
         <span class="line cubicBezier"></span>
-        <h2 id="designs" class="easeIn">Designs</h2>
+        <h2 id="design" class="ease">Design</h2>
       </section>
       <div class="nextSection">
         <a href="javascript:scrollDown()">
@@ -107,7 +107,7 @@
       </div>
     </footer>
   </div>
-  <div id="main2"></div>
+  <div id="main2" tabindex="-1"></div>
  
   <!-- jQuery -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
