--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -29,7 +29,7 @@
       <li><a href="/about">About&Contact</a></li>
     </ul>
   </header>
-  <div id="main" class="projects">
+  <div id="main" class="projects" tabindex="-1">
     <div id="content" class="container">
       <section>
         <h1>Projects</h1>
@@ -49,9 +49,9 @@
           </div>
 
           <div class="grid-thirds">
+            <a href="/projects/{{projects.7.url}}"><img src="{{projects.7.preview}}" id="{{projects.7.id}}"></a>
             <a href="/projects/{{projects.5.url}}"><img src="{{projects.5.preview}}" id="{{projects.5.id}}"></a>
             <a href="/projects/{{projects.6.url}}"><img src="{{projects.6.preview}}" id="{{projects.6.id}}"></a>
-            <a href="/projects/{{projects.7.url}}"><img src="{{projects.7.preview}}" id="{{projects.7.id}}"></a>
           </div>
         </div>
       </section>
@@ -79,7 +79,7 @@
       </div>
     </footer>
   </div>
-  <div id="main2"></div>
+  <div id="main2" tabindex="-1"></div>
  
   <!-- jQuery -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
