fixed bg and downArrow improved

--- a/public/css/zxzdesigns.css
+++ b/public/css/zxzdesigns.css
@@ -131,24 +131,22 @@ header ul li a:hover{
 	background: url("../PingPong.jpg");
 	width:100%;
 	height:100%;
-/*	background: url("../ActivityVizCover.jpg");*/
 	background-size:cover;
 	background-position:center center;
+	background-attachment:fixed;
 	text-align: center;
 	position:relative;
 }
 #splashHome{
-	background: url("../photo1.JPG");
+	background: url("../HomeCover.jpg");
 	width:100%;
 	height:100%;
 	background-size:cover;
 	background-position:center center;
-	text-align: center;
-	position:relative;
+	background-attachment:fixed;
+	overflow:hidden;
 }
-/*#splashHome{
-	background: url("../photo1.jpg");
-}*/
+
 #code,#design{
 	position:relative;
 }
@@ -166,6 +164,7 @@ header ul li a:hover{
 	background-position:center center;
 	text-align: center;
 	position:relative;
+	background-attachment:fixed;
 }
 #mutt p a{
 	position:absolute;
@@ -248,7 +247,7 @@ header ul li a:hover{
 }
 .splash .splashTitle .line{
 	background:#fff;
-	height:3px;
+	height:0.2em;
 	display:block;
 	margin:0 auto;
 	width:0;
@@ -685,15 +684,11 @@ left: 0;
    	box-shadow:         inset 0 0 10px #000000;
 }
 .nextSection{
-	position:absolute;
-	bottom:-10%;
-	left:50%;
-	padding:0 0.5em;
+	position:relative;
+	text-align:center;
+	top:110%;
+	padding:0 0 1em 0;
 	color:white;
-	-webkit-transform: translate(-60%, -50%);
-	-moz-transform: translate(-60%, -50%);
-	-ms-transform: translate(-60%, -50%);
-	-o-transform: translate(-60%, -50%);
 	-ms-transition: all 0.8s ease;
 	-webkit-transition: all 0.8s ease;
 	-moz-transition: all 0.8s ease;
@@ -702,10 +697,26 @@ left: 0;
 }
 .nextSection a{
 	color:#fff;
-	opacity:0.5;
 }
-.nextSection a:hover{
-	opacity:1;
+#downArrow{
+	padding:0.5em;
+	-ms-transition: all 0.8s ease;
+	-webkit-transition: all 0.8s ease;
+	-moz-transition: all 0.8s ease;
+	-o-transition: all 0.8s ease;
+	transition: all 0.8s ease;
+}
+#downArrow:hover{
+	-webkit-animation: nextArrow 0.5s infinite; /* Chrome, Safari, Opera */
+    animation: nextArrow 0.5s infinite;
+}
+@-webkit-keyframes nextArrow {
+    from {padding-top: 0.5em;}
+    to {padding-top:1em;}
+}
+@keyframes nextArrow {
+    from {padding-top: 0.5em;}
+    to {padding-top:1em;}
 }
 #error{
 	color:red;
