--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -37,7 +37,7 @@
       </section>
       <div class="nextSection">
         <a href="javascript:scrollDown()">
-          <span class="glyphicon glyphicon-chevron-down"></span>
+          <span class="glyphicon glyphicon-chevron-down" id="downArrow"></span>
         </a>
       </div>
     </div>
