--- a/views/SFMuseum.handlebars
+++ b/views/SFMuseum.handlebars
@@ -2,11 +2,10 @@
 
 <html>
 <head>
-	<title>Projects</title>	
+	<title>SF Museum</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <link rel="icon" type="image/png" href="../favicon.ico">
-	
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -14,9 +13,9 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->        
-      <link rel="stylesheet" type="text/css" href="css/cleanup.css">
-      <link rel="stylesheet" type="text/css" href="css/zxzdesigns.css">
-      <link rel="stylesheet" type="text/css" href="css/icons.css">
+      <link rel="stylesheet" type="text/css" href="../css/cleanup.css">
+      <link rel="stylesheet" type="text/css" href="../css/zxzdesigns.css">
+      <link rel="stylesheet" type="text/css" href="../css/icons.css">
       <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 </head>
 
@@ -29,37 +28,19 @@
       <li><a href="/about">About&Contact</a></li>
     </ul>
   </header>
-  <div id="main" class="projects" tabindex="-1">
+  <div id="main" class="1" tabindex="-1">
     <div id="content" class="container">
-      <section>
-        <h1>Projects</h1>
+      <section class="project">
+        <h1>SF Museum</h1>
         <p class="centerText">
-          All of my projects were developed by using Node.js unless otherwise indicated. My roles in the projects were a graphic designer, a UX designer, & a coder.
+          "The Virtual Museum of the City of San Francisco, sfmuseum.org, functions as a general multi-media website utilizing text, graphics, and sounds.  We are primarily a research and educational site for scholars, young and old.  Our site features the interesting, the amusing, and the unusual in San Francisco's history." - SFMuseum.org
         </p>
-        <div class="center">
-          <div class="grid-half">
-            <a href="/projects/{{projects.9.url}}"><img src="{{projects.9.preview}}" id="{{projects.9.id}}"></a>
-          </div>
-          <div class="grid-half">
-            <a href="/projects/{{projects.8.url}}"><img src="{{projects.8.preview}}" id="{{projects.8.id}}"></a>
-          </div>
-        </div>
-        <div class="center">
-          <div class="grid-thirds">
-            <a href="/projects/{{projects.0.url}}"><img src="{{projects.0.preview}}" id="{{projects.0.id}}"></a>
-            <a href="/projects/{{projects.1.url}}"><img src="{{projects.1.preview}}" id="{{projects.1.id}}"></a>
-          </div>
-
-          <div class="grid-thirds">
-            <a href="/projects/{{projects.2.url}}"><img src="{{projects.2.preview}}" id="{{projects.2.id}}"></a>
-            <a href="/projects/{{projects.3.url}}"><img src="{{projects.3.preview}}" id="{{projects.3.id}}"></a>
-            <a href="/projects/{{projects.4.url}}"><img src="{{projects.4.preview}}" id="{{projects.4.id}}"></a>
-          </div>
-
-          <div class="grid-thirds">
-            <a href="/projects/{{projects.7.url}}"><img src="{{projects.7.preview}}" id="{{projects.7.id}}"></a>
-            <a href="/projects/{{projects.5.url}}"><img src="{{projects.5.preview}}" id="{{projects.5.id}}"></a>
-            <a href="/projects/{{projects.6.url}}"><img src="{{projects.6.preview}}" id="{{projects.6.id}}"></a>
+        <p class="centerText">
+          COMING SOON...2015
+        </p>
+        <div>
+          <div>
+            <img src="../Project/SFMPreview.jpg">
           </div>
         </div>
       </section>
@@ -87,8 +68,9 @@
       </div>
     </footer>
   </div>
+
   <div id="main2" tabindex="-1"></div>
- 
+  
   <!-- jQuery -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
@@ -99,9 +81,9 @@
   <script src="//browserstate.github.io/history.js/scripts/bundled/html4+html5/jquery.history.js"></script>
 
   <!-- Ajaxify -->
-  <script src="js/ajaxify.js"></script>
+  <script src="../js/ajaxify.js"></script>
   <!-- <script src="https://code.jquery.com/jquery.js"></script>-->
-  <script src="js/mainscript.js"></script>
-  <script src="js/default.js"></script>
+  <script src="../js/mainscript.js"></script>
+  <script src="../js/default.js"></script>
 </body>
 </html>
