--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -82,7 +82,7 @@
       </section>
     </div>
     <section class="splash" id="mutt">
-      <p class="centerText"><a class="button" href="http://instagram.com/zhenito" target="_blank" class="no-ajaxy">Instagram</a></p>
+      <p class="centerText"><a class="no-ajaxy button" href="https://instagram.com/zhenito/" target="_blank">Instagram</a></p>
     </section>
     <footer>
       <div>
