updated contact message

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -61,7 +61,7 @@
       <section class="contactMe">
         <h1>Contact Me</h1>
         <p class="centerText">
-          I am currently on vacation, but I am seeking a full time role as a Graphic / UI / UX designer. Please drop a line and say hi :)
+          I am currently working with a few local businesses and non-profitable organizations as a web application designer/developer, but I am seeking a full time role as a Graphic/UI/UX designer/developer. Please drop a line and say hi :)
         </p>
         <form class="container">
           <div class="center">
