--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -31,25 +31,55 @@
   <div id="main" class="about" tabindex="-1">
     <div class="splash" id="splashAbout">
       <section class="splashTitle">
-        <h1>Hi, I'm Zhen</h1>
+        <h1>Rally for serve?</h1>
       </section>
     </div>
 
     <div id="content" class="container">
       <section class="aboutMe">
         <p class="large">
-          Hi! I'm Zhen (/zen/) and I'm a Graphic/UI/UX designer. I have a passion for technology and product designing. I currently live in San Francisco and I recently completed my study on Human Computer Interaction at the University of California San Diego.
+          I’m Zhen (/zen) and I currently live in San Francisco.
+        </p>
+        <p class="large">
+          I love pushing pixels, designing products, improving my coding abilities and crafting everything from scratch. See my work on my portfolio.
         </p>
         <div class="center">
-          <div class="grid-half">
-            <p class="small">
-              I am interested in technology, and making things simpler and easier in life through technology interests me the most. My goal is to create and design products that will improve our daily problems via clean interfaces and simple interactions. I want to improve what we have right now, and design something better for the future. To complete my specialization in HCI, I opted to take computer science courses to improve my understanding of computer engineering. Therefore, one of my strengths as a designer is the ability to handle both front end and back end aspects of a project.
+          <div class="grid-thirds">
+            <p class="small note">
+              <strong>UI/UX Designer</strong><br/>
+              I create interfaces that are clean, efficient, and visually pleasing.
             </p>
           </div>
-
-          <div class="grid-half">
-            <p class="small">
-              Before moving to San Francisco, I lived in a few different places: China for 12 years, Kamehameha Street in Honolulu, Hawaii for 4 months, Los Angeles for 6 years, and San Diego for 6 years. I am fluent in English, Cantonese, Mandarin, and one of the many Chinese Dialects. I am a huge dog-lover. I rescued two amazing dogs from the animal shelter: A Maltese mix named Pookie and a Sharpei mix named Penelope. I am a decent tennis player and an awesome Ping Pong player. I wanted to become a firefighter, so I have a certificate in Fire Protection Technology and I was a Nationally Registered EMT.
+          <div class="grid-thirds">
+            <p class="small note">
+              <strong>Graphic Designer</strong><br/>
+              I design graphics & icons to visually convey the meaning of the brand.
+            </p>
+          </div>
+          <div class="grid-thirds">
+            <p class="small note">
+              <strong>Web Developer</strong><br/>
+              I build custom web applications for local businesses and organizations.
+            </p>
+          </div>
+        </div>
+        <div class="center">
+          <div class="grid-thirds">
+            <p class="small note">
+              <strong>UC Graduate</strong><br/>
+              I have a B.S. in Human Computer Interaction (HCI) from UC San Diego.
+            </p>
+          </div>
+          <div class="grid-thirds">
+            <p class="small note">
+              <strong>Ice-Cream Lover</strong><br/>
+              I love all ice-cream. My current favorite flavor is Three Twins Lemon Cookie.
+            </p>
+          </div>
+          <div class="grid-thirds">
+            <p class="small note">
+              <strong>Dog-Rescuer</strong><br/>
+              I rescued two dogs from the shelter. Check them out on Instagram.
             </p>
           </div>
         </div>
@@ -57,7 +87,8 @@
           <a href="/Resume/FlatResumeWeb.pdf" target="_blank" class="no-ajaxy button">My Resume<span class="glyphicon glyphicon-new-window"></span></a>
         </p>
       </section>
-
+    </div>
+    <div class="container">
       <section class="contactMe">
         <h1>Contact Me</h1>
         <p class="centerText">
