--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,7 +12,8 @@
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->        
+    <![endif]-->
+      <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext'>
       <link rel="stylesheet" type="text/css" href="css/cleanup.css">
       <link rel="stylesheet" type="text/css" href="css/zxzdesigns.css">
       <link rel="stylesheet" type="text/css" href="css/icons.css">
@@ -31,9 +32,9 @@
   <div id="main" class="home active" tabindex="-1">
     <div class="splash" id="splashHome">
       <section class="splashTitle">
-        <h2 id="code" class="ease">Code  &</h2>
-        <span class="line cubicBezier"></span>
-        <h2 id="design" class="ease">Design</h2>
+        <h2 id="line1" class="ease hideBottom">Hi, I'm Zhen</h2>
+        <h2 id="line2" class="ease hideBottom">and I like to code & design</h2>
+        <h2 id="line3" class="ease hideBottom">user experience</h2>
       </section>
       <div class="nextSection">
         <a href="javascript:scrollDown()">
@@ -43,47 +44,58 @@
     </div>
 
     <div id="content" class="container">
-      <section class="aboutMe">
-        <figure>
-          <img src="Zhen.jpg">
-        </figure>
-        <p class="large">
-          Hi! I'm Zhen (/zen/) and I'm a Graphic/UI/UX designer. I have a passion for technology and product designing. I currently live in San Francisco and I recently completed my study on Human Computer Interaction at the University of California San Diego.
-        </p>
-        <p class="centerText"><a class="button" href="/about">About & Contact</a></p>
-      </section>
-
       <section class="whatIdo">
-        <h1>What I Do</h1>
+        <h2>Some of my projects</h2>
+        <p class="small">Design Tools: Photoshop, Illustrator, Wireframe, Prototype</p>
+        <p class="small">Technical Tools: HTML/CSS, Jade, MEAN (MongoDB, ExpressJS, AngularJS, NodeJS)
+        <div class="container">
+          <figure class="grid-thirds">
+            <img class="bgImg" style="background-image:url('Project/IconDesign/CognectionLogo.jpg')">
+          </figure>
+          <figure class="grid-thirds">
+            <img class="bgImg" style="background-image:url('Project/IconDesign/ActivityViz-basic.jpg')">
+          </figure>
+          <figure class="grid-thirds">
+            <img class="bgImg" style="background-image:url('Project/DancingPreview.jpg')">
+          </figure>
+          <figure class="grid-thirds">
+            <img class="bgImg" style="background-image:url('Project/ActivityViz/Cover.jpg')">
+          </figure>
+          <figure class="grid-thirds">
+            <img class="bgImg" style="background-image:url('Project/SocialFitness/AffinityDiagram2.jpg')">
+          </figure>
+          <figure class="grid-thirds">
+            <img class="bgImg" style="background-image:url('Project/ResumeDesign/Resume2014.jpg')">
+          </figure>
+        </div>
         <div class="center">
-          <div class="grid-thirds">
-            <h2>Graphic</h2>
-            <p class="small">
-              Photoshop & Illustrator are no secret to me. My responsibility in a team often includes designing graphic & icons. Visual representation is more powerful & more universally conveying than words. Therefore, being able to manipulate graphics & images is very essential to product designing.
+          <div class="grid-half">
+            <p class="centerText">
+              <a href="/Resume/FlatResumeWeb.pdf" target="_blank" class="no-ajaxy button">My Resume<span class="glyphicon glyphicon-new-window"></span></a>
             </p>
           </div>
-
-          <div class="grid-thirds">
-            <h2>UX</h2>
-            <p class="small">
-              A product is more than just an idea. Even a billion-dollar idea will fail if its design is not user friendly or efficient. My key to success is to focus on the users & design all of the features around them. Some of the useful design rules that I have used are Heuristic Evaluation & Contextual Inqury.
-            </p>
-          </div>
-          <div class="grid-thirds">
-            <h2>Code</h2>
-            <p class="small">
-              What's the point of having a brilliant idea & a pixel-perfect design when you can't implement it? This was the biggest drawback for me as a designer. So I took coding courses to increase my understanding of computer science while I was studying HCI in UCSD. Now I can handle both front & back end.
+          <div class="grid-half">
+            <p class="centerText">
+              <a class="button" href="/projects">My Projects</a>
             </p>
           </div>
         </div>
-        <p class="centerText">
-          <a class="button" href="/projects">My Projects</a>
-        </p>
       </section>
     </div>
     <section class="splash" id="mutt">
       <p class="centerText"><a class="no-ajaxy button" href="https://instagram.com/zhenito/" target="_blank">Instagram</a></p>
     </section>
+    <div class="container">
+      <section class="aboutMe">
+            <figure>
+              <img src="Zhen.jpg">
+            </figure>
+            <p class="large">
+              Hi! I'm Zhen (/zen/) and I'm a Graphic/UI/UX designer in San Francisco. I have a B.S. in Human Computer Interaction from the University of California San Diego. I have a passion for designing products, building applications, and updating my coding ability. 
+            </p>
+        <p class="centerText"><a class="button" href="/about">About & Contact</a></p>
+      </section>
+    </div>
     <footer>
       <div>
         <div>
