--- a/public/css/zxzdesigns.css
+++ b/public/css/zxzdesigns.css
@@ -139,7 +139,8 @@ header ul li a:hover{
 }
 
 #splashHome{
-	background: url("../HomeCover.jpg");
+	position:relative;
+	background: url("../HomeCover2.JPG");
 	width:100%;
 	height:100%;
 	background-size:cover;
@@ -147,9 +148,73 @@ header ul li a:hover{
 	background-attachment:fixed;
 	overflow:hidden;
 }
+#splashHome:before{
+	position:absolute;
+	width:100%;
+	height:100%;
+	top:0;
+	left:0;
+	background:black;
+	opacity:0.5;
+	content:'';
+}
+#splashAbout .splashTitle{
+	left:auto;
+	width:50%;
+	right:5%;
+	-webkit-transform: translate(0%, -50%);
+	-moz-transform: translate(0%, -50%);
+	-ms-transform: translate(0%, -50%);
+	-o-transform: translate(0%, -50%);
+}
+#splashAbout .splashTitle h1{
+	color:#fff;
+	font-size:7vw;
+}
 
-#code,#design{
+.splashTitle h1:first-child{
+	font-size:15vw;
+}
+
+.splashTitle h2{
+	color:#fff;
+	font-size:7.5vw;
+	margin-bottom:0;
+	line-height:1em;
+	text-align:center;
+}
+.splash .splashTitle .line{
+	background:#fff;
+	height:0.2em;
+	display:block;
+	margin:0 auto;
+	width:0;
+	opacity:1;
+}
+#line1,#line2,#line3{
 	position:relative;
+	bottom:0;
+}
+#line1{
+	font-size:7.5vw !important;
+	-moz-transition-delay: 0s;
+	-o-transition-delay: 0s;
+	-webkit-transition-delay: 0s;
+	transition-delay: 0s;
+}
+#line2{
+	font-size:3vw !important;
+	-moz-transition-delay: .08s;
+	-o-transition-delay: .08s;
+	-webkit-transition-delay: .08s;
+	transition-delay: .08s;
+}
+#line3{
+	font-size:5vw !important;
+	-moz-transition-delay: .16s;
+	-o-transition-delay: .16s;
+	-webkit-transition-delay: .16s;
+	transition-delay: .16s;
 }
 #code{
 	top:0.1em;
@@ -158,7 +223,7 @@ header ul li a:hover{
 	bottom:0.1em;
 }
 #mutt{
-	background: url("../photo4.JPG");
+	background: url("../Penelope.jpg");
 	width:100%;
 	height:100%;
 	background-size:cover;
@@ -172,7 +237,7 @@ header ul li a:hover{
 	bottom:13%;
 	-webkit-transform: translate(-50%, -50%);
 	-moz-transform: translate(-50%, -50%);
-	-ms-transform: translate(50%, -50%);
+	-ms-transform: translate(-50%, -50%);
 	-o-transform: translate(-50%, -50%);
 }
 #mutt .button{
@@ -189,23 +254,14 @@ header ul li a:hover{
 }
 .splashTitle{
 	position: absolute;
-	width:100%;
+	display:inline-block;
 	text-align:center;
 	top:50%;
-	-webkit-transform: translate(0px, -50%);
-	-moz-transform: translate(0px, -50%);
-	-ms-transform: translate(0px, -50%);
-	-o-transform: translate(0px, -50%);
-}
-#splashHome .splashTitle h1{
-	width:100%;
-	color:#fff;
-	padding:.1em 0;
-	margin-top:10px;
-	margin-bottom:0;
-	opacity:0;
-	line-height:.5em;
-	display: inline-block;
+	left:50%;
+	-webkit-transform: translate(-50%, -50%);
+	-moz-transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	-o-transform: translate(-50%, -50%);
 }
 .ease{
 	-ms-transition: all 0.8s ease;
@@ -228,32 +284,7 @@ header ul li a:hover{
 	-o-transition: all 0.8s ease-out;
 	transition: all 0.8s ease-out;
 }
-#splashAbout .splashTitle h1{
-	color:#fff;
-	font-size:7vw;
-}
-.splashTitle h1:first-child{
-	font-size:15vw;
-}
-.about .splashTitle h1{
-	padding-left:37%;
-}
-.splashTitle h2{
-	color:#fff;
-	font-size:7.5vw;
-	margin-bottom:0;
-	opacity:0;
-	line-height:1em;
-	display:inline-block;
-}
-.splash .splashTitle .line{
-	background:#fff;
-	height:0.2em;
-	display:block;
-	margin:0 auto;
-	width:0;
-	opacity:1;
-}
+
 .cubicBezier{
 	-ms-transition: all 0.8s cubic-bezier(0,1.5,0.5,1);
 	-webkit-transition: all 0.8s cubic-bezier(0,1.5,0.5,1);
@@ -261,13 +292,10 @@ header ul li a:hover{
 	-o-transition: all 0.8s cubic-bezier(0,1.5,0.5,1);
 	transition: all 0.8s cubic-bezier(0,1.5,0.5,1);
 }
-.aboutMe{
-	margin-bottom:10em;
-}
 .contactMe h1, .projects h1, .project h1{
 	margin-bottom:0.7em;
 }
-.whatIdo, .contactMe{
+.aboutMe, .contactMe{
 	margin-bottom:3em;
 }
 .aboutMe:after, .contactMe:after{
@@ -288,6 +316,35 @@ header ul li a:hover{
 }
 .home .aboutMe img{
 	width:100%;
+}
+.whatIdo h2, p.small{
+	text-align:center !important;
+	margin:0 auto !important;
+}
+.whatIdo .grid-thirds{
+	width:32%;
+	margin-right:1.5%;
+	padding-bottom:1.5%;
+}
+.whatIdo .grid-thirds:nth-child(3n+0){
+	margin-right:0;
+}
+.whatIdo figure{
+	display:inline-block;
+	line-height:0;
+	float:left;
+}
+.bgImg{
+	width:100%;
+	height:200px;
+	background-size:cover;
+	background-position:center center;
+}
+.whatIdo figure:nth-child(3n+0){
+	margin-right:0;
+}
+.whatIdo img{
+	margin:0;
 }
 .whatIdo .grid-thirds h2{
 	font-size:18px;
@@ -614,7 +671,14 @@ position: absolute;
 top: 0;
 left: 0;
 }*/
-
+.hideBottom{
+	bottom:-50px !important;
+	opacity:0 !important;
+}
+.hideTop{
+	top: -10px;
+	opacity: 0;
+}
 .goaway {
 	-ms-transition: all 0.6s cubic-bezier(0.645, 0.045, 0.355, 1);
 	-webkit-transition: all 0.6s cubic-bezier(0.645, 0.045, 0.355, 1);
