--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -31,7 +31,7 @@
   <div id="main" class="about" tabindex="-1">
     <div class="splash" id="splashAbout">
       <section class="splashTitle">
-        <h1>Rally for serve?</h1>
+        <h1>Hi, I'm Zhen</h1>
       </section>
     </div>
 
